--- a/src/client/components/Dashboard/CalendarControls/index.scss
+++ b/src/client/components/Dashboard/CalendarControls/index.scss
@@ -2,4 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  .right-controls{
+    display: flex;
+    align-items: center;
+  }
 }
