--- a/src/client/components/Dashboard/CalendarBody/MonthView/index.scss
+++ b/src/client/components/Dashboard/CalendarBody/MonthView/index.scss
@@ -6,6 +6,7 @@
         min-height: 110px;
         height: 110px;
         cursor: pointer;
+        max-width: 70px;
         &:hover{
           background: rgba(128, 128, 128, 0.29);
         }
